--- a/frontend/src/app/shared/components/layouts/top-nav/top-nav.component.html
+++ b/frontend/src/app/shared/components/layouts/top-nav/top-nav.component.html
@@ -1,1 +1,11 @@
-<p>top-nav works!</p>
+<header class="z-40">
+    <div class="shadow-sm">
+        <div class="relative bg-red-400 flex w-full items-center px-5 py-2.5 dark:bg-black h-14">
+            <div class="horizontal-logo flex lg:hidden justify-between items-center ltr:mr-2 rtl:ml-2">
+                <div class="ltr:mr-2 rtl:ml-2 hidden sm:block">
+
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
