--- a/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.html
@@ -1,1 +1,32 @@
-<p>sidebar works!</p>
+<nav class="sidebar fixed min-h-screen h-full top-0 bottom-0 w-[260px] z-50 transition-all duration-300">
+    <div class="bg-blue-300 dark:bg-black h-full">
+        <div class="flex justify-between items-center px-4 py-3">
+            <a class="main-logo flex items-center shrink-0" href="/">
+                <img class="w-8 ml-[5px] flex-none" src="https://react.vristo.sbthemes.com/assets/images/logo.svg"
+                    alt="logo">
+                <span
+                    class="text-2xl ltr:ml-1.5 rtl:mr-1.5 font-semibold align-middle lg:inline dark:text-white-light">HBSOFT</span>
+            </a>
+            <button type="button" class="">
+                --
+            </button>
+        </div>
+        <div class="scrollbar-container h-[calc(100vh-80px)] relative ps ps--active-y">
+            <div *ngFor="let menu of menus; let i = index" class="menu-container">
+                <div (click)="toggleMenu(i)" class="menu-title">
+                    {{ menu.title }}
+                </div>
+                <div *ngIf="menu.isOpen" class="menu-items" [@dropDownMenu]>
+                    <ul>
+                        <li *ngFor="let item of menu.items" class="menu-item" (click)="toggleSubMenu(i)">
+                            {{ item }}
+                            <div *ngIf="menu.subMenuOpen">
+                                Submenu content for {{ item }}
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
