--- a/frontend/src/app/features/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/pages/dashboard/dashboard.component.html
@@ -1,1 +1,33 @@
-<p>dashboard works!</p>
+<p>dashboard works!
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+</p>
