--- a/frontend/src/app/features/base/base.component.html
+++ b/frontend/src/app/features/base/base.component.html
@@ -1,10 +1,8 @@
-<div class="navbar-static main-container text-black dark:text-white-dark min-h-screen">
-    <div>
-        <app-sidebar></app-sidebar>
-    </div>
-    <div class="main-content flex flex-col min-h-screen">
+<div class="">
+    <app-sidebar></app-sidebar>
+    <div class="ltr:ml-[260px] bg-[#f5f5f5]">
         <app-top-nav></app-top-nav>
-        <div class="p-6">
+        <div class="">
             <router-outlet></router-outlet>
         </div>
     </div>
