--- a/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.html
@@ -1,39 +1,31 @@
-<nav class="sidebar fixed min-h-screen h-full top-0 bottom-0 w-[260px] z-50 transition-all duration-300">
-    <div class="bg-blue-300 dark:bg-black h-full">
-        <div class="flex justify-between items-center px-4 py-3">
-            <a class="main-logo flex items-center shrink-0" href="/">
-                <img class="w-8 ml-[5px] flex-none" src="https://react.vristo.sbthemes.com/assets/images/logo.svg"
-                    alt="logo">
-                <span
-                    class="text-2xl ltr:ml-1.5 rtl:mr-1.5 font-semibold align-middle lg:inline dark:text-white-light">HBSOFT</span>
-            </a>
-            <button type="button" class="">
-                --
-            </button>
-        </div>
-        <div class="scrollbar-container h-[calc(100vh-80px)] relative ps ps--active-y">
-            <div *ngFor="let menu of menus; let i = index" class="menu-container">
-                <div (click)="toggleMenu(i)" class="menu-title flex justify-between items-center"
-                    [class.selected]="menu.isSelected">
-                    <div class="flex justify-left items-center">
-                        <img class="w-[1.1rem] h-[1.1rem] mr-1" [src]="menu.iconSrc" alt="Menu Icon">
-                        <span>{{ menu.title | translate }}</span>
-                    </div>
-                    <div *ngIf="menu.items.length > 0">
-                        <img class="w-[1.1rem] h-[1.1rem] mr-1"
-                            [src]="menu.isOpen ? '/assets/icons/chevron-line.svg' : '/assets/icons/chevron-line-down.svg'"
-                            alt="Menu Icon">
-                    </div>
-                </div>
-                <div *ngIf="menu.isOpen" class="menu-items" [@dropDownMenu]>
-                    <ul>
-                        <li *ngFor="let item of menu.items" class="menu-item">
-                            {{ item }}
-                        </li>
-                    </ul>
-                </div>
-            </div>
+<nav class="fixed top-0 left-0 h-full w-[260px]">
+    <a class="flex items-center justify-start py-4 px-4 bg-white" routerLink="/">
+        <img class="h-[2.9rem]" src="/assets/images/logo-type.svg" alt="logo">
+    </a>
+    <!-- end logo and logo type -->
 
+    <div class="menu-container">
+        <p class="menu-container_top-nav">Navigation</p>
+        <div *ngFor="let menu of menus; let i = index">
+            <a class="menu-container_item" [routerLinkActiveOptions]="{ exact: true }" [routerLink]="menu.routerLink"
+                routerLinkActive="active-link">
+                <div class="menu-container_item--title">
+                    <img class="menu-icon" [src]="menu.iconSrc" alt="Menu Icon">
+                    <span class="menu-text">{{ menu.title | translate }}</span>
+                </div>
+                <div *ngIf="menu.items.length > 0">
+                    <img class="w-[1.1rem] h-[1.1rem] mr-1"
+                        [src]="menu.isOpen ? '/assets/icons/chevron-line.svg' : '/assets/icons/chevron-line-down.svg'"
+                        alt="Menu Icon">
+                </div>
+            </a>
+            <div *ngIf="menu.isOpen" class="menu-items" [@dropDownMenu]>
+                <ul>
+                    <li *ngFor="let item of menu.items" class="menu-item">
+                        {{ item }}
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </nav>
