--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,20 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.main-container {
-    .main-content {
-        @apply ltr:ml-[260px] rtl:mr-[260px];
-        transition-property: all;
-        transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-        transition-duration: .3s;
-    }
-}
+@import "assets/scss/custom";
 
-
-
-* {
-    // @apply font-mono;
-    // font-family: sans;
-}
