--- a/frontend/src/app/features/pages/dashboard/components/product-sales-chart/product-sales-chart.component.html
+++ b/frontend/src/app/features/pages/dashboard/components/product-sales-chart/product-sales-chart.component.html
@@ -1,5 +1,5 @@
 <div class="p-5 rounded-lg bg-white shadow-sm hover:shadow-md transition duration-200">
-    <h3>Product sales</h3>
+    <h3 class="text-primary-900 font-extrabold text-lg border-b mb-2 pb-3">PRODUCT SALES</h3>
     <div>
         <p-chart type="bar" [data]="data" [options]="options"></p-chart>
     </div>
