--- a/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.scss
+++ b/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.scss
@@ -2,7 +2,7 @@
     @apply w-full;
 
     &_top-nav {
-        @apply text-secondray-300 ml-5 text-sm mt-3 font-bold;
+        @apply text-secondray-300 ml-2 text-base mt-3 font-normal;
     }
 
     &_item {
