Fix menu problem

--- a/frontend/src/app/features/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/pages/dashboard/dashboard.component.html
@@ -17,10 +17,14 @@
                 icon="profile-tick.svg"></app-state-box>
         </div>
     </div>
-    <div class="grid grid-cols-12 gap-4">
+    <div class="grid grid-cols-12 gap-4 mb-4">
         <div class="col-span-12 xl:col-span-12">
             <app-product-sales-chart></app-product-sales-chart>
         </div>
     </div>
-
+    <div class="grid grid-cols-12 gap-4 mb-4">
+        <div class="col-span-12 xl:col-span-12">
+            <app-recent-orders></app-recent-orders>
+        </div>
+    </div>
 </div>
