--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,10 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+@import "tailwindcss/base" layer(tailwindcss);
+@import "tailwindcss/components" layer(tailwindcss);
+@import "tailwindcss/utilities" layer(tailwindcss);
+
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+// Customize ng prime components
+@import "assets/scss/ngprime-custom";
 
 @import "assets/scss/custom";
-
