--- a/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
+++ b/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
@@ -1,1 +1,35 @@
-<p>e-commerce works!</p>
+<div class="mx-4 pb-4">
+    <div class="grid grid-cols-12 gap-4 mb-4">
+        <div class="col-span-12 xl:col-span-8">
+            <div class="grid grid-cols-12 gap-4">
+                <div class="col-span-12 xl:col-span-4">
+                    <app-e-state-box></app-e-state-box>
+                </div>
+                <div class="col-span-12 xl:col-span-4">
+                    <app-e-state-box></app-e-state-box>
+                </div>
+                <div class="col-span-12 xl:col-span-4">
+                    <app-e-state-box></app-e-state-box>
+                </div>
+            </div>
+        </div>
+        <div class="col-span-12 xl:col-span-4">
+            <app-e-state-box></app-e-state-box>
+        </div>
+    </div>
+</div>
+<!-- 
+<div class="grid grid-cols-10 gap-4 mb-4">
+    <div class="col-span-12 xl:col-span-2">
+        <app-e-state-box></app-e-state-box>
+    </div>
+    <div class="col-span-12 xl:col-span-2">
+        <app-e-state-box></app-e-state-box>
+    </div>
+    <div class="col-span-12 xl:col-span-2">
+        <app-e-state-box></app-e-state-box>
+    </div>
+    <div class="col-span-12 xl:col-span-4">
+        <app-e-state-box></app-e-state-box>
+    </div>
+</div> -->
