--- a/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.scss
+++ b/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.scss
@@ -6,7 +6,7 @@
     }
 
     &_item {
-        @apply flex justify-between items-center p-2.5 rounded-md m-2;
+        @apply flex justify-between items-center p-2.5 rounded-md m-2 tracking-wide;
 
         &--title {
             @apply flex items-center;
@@ -26,18 +26,18 @@
         @apply bg-primary-50 shadow-sm;
 
         .menu-text {
-            @apply text-primary-700 font-bold;
+            @apply text-primary-700 font-semibold;
         }
     }
 
 
     .menu-items {
         .menu-item {
-            @apply block p-2 pl-8 mx-2 text-base transition-all duration-200 hover:bg-primary-500 hover:text-white rounded-md;
+            @apply block p-2 pl-8 mx-2 text-sm mb-1 tracking-wide transition-all duration-200 hover:bg-primary-500 hover:text-white rounded-md;
         }
 
         .active-sub-link {
-            @apply bg-primary-500 text-white rounded-md;
+            @apply bg-primary-500 text-white font-semibold rounded-md;
         }
     }
 }
