--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,12 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
-@import "tailwindcss/base" layer(tailwindcss);
-@import "tailwindcss/components" layer(tailwindcss);
-@import "tailwindcss/utilities" layer(tailwindcss);
-
-@import "primeng/resources/themes/lara-light-blue/theme.css";
-@import "primeng/resources/primeng.css";
-
 // Customize ng prime components
+
+@layer tailwind-base, primeng, tailwind-utilities;
+
+@layer tailwind-base {
+    @tailwind base;
+}
+
+@layer tailwind-utilities {
+    @tailwind components;
+    @tailwind utilities;
+}
+
+@layer primeng {
+    @import "primeng/resources/themes/lara-light-blue/theme.css";
+    @import "primeng/resources/primeng.css";
+    @import "primeicons/primeicons.css";
+}
+
+@import "assets/scss/fonts";
+
 @import "assets/scss/ngprime-custom";
 
 @import "assets/scss/custom";
