--- a/frontend/src/app/features/pages/dashboard/components/e-commerce/e-state-box/e-state-box.component.html
+++ b/frontend/src/app/features/pages/dashboard/components/e-commerce/e-state-box/e-state-box.component.html
@@ -1,3 +1,20 @@
 <app-card>
-    
+    <div class="group">
+        <div class="flex justify-between items-center">
+            <div>
+                <h5 class="font-fontFamily font-bold text-3xl text-primary-900 mb-2">{{price}}</h5>
+                <p class="text-[15px] text-secondray-400">Total Sales</p>
+            </div>
+            <div
+                class="flex items-center justify-center bg-primary-50 duration-200 transition-all group-hover:bg-primary-500 w-14 h-14 rounded-md">
+            </div>
+        </div>
+        <div class="flex items-center mt-6">
+            <img [src]="state? '/assets/icons/trend-up.svg':'/assets/icons/trend-down.svg'" class="w-5 h-5" alt="trend">
+            <div>
+                <span class="font-fontFamily font-semibold text-[15px] mx-1.5" [ngClass]="state? 'text-green':'text-red'">{{percentage}}</span>
+            </div>
+            <p class="text-primary-900 text-[15px] font-medium">Up from past week</p>
+        </div>
+    </div>
 </app-card>
