--- a/frontend/src/app/features/pages/dashboard/components/e-commerce/e-rating-box/e-rating-box.component.html
+++ b/frontend/src/app/features/pages/dashboard/components/e-commerce/e-rating-box/e-rating-box.component.html
@@ -1,7 +1,7 @@
 <app-card>
     <div class="group flex justify-between">
         <div>
-            <h4 class="font-semibold text-lg mb-2">Ratings</h4>
+            <h4 class="title-header font-semibold text-lg mb-2">Ratings</h4>
             <p>
                 <strong class="text-gray-400 font-medium text-sm">YEAR OF 2022</strong>
             </p>
