--- a/frontend/src/assets/scss/_custom.scss
+++ b/frontend/src/assets/scss/_custom.scss
@@ -2,7 +2,11 @@ p,
 div,
 span,
 strong {
-    // @apply font-fontFamily;
+    @apply font-fontFamily;
+}
+
+.title-header {
+    @apply font-headingFontFamily;
 }
 
 .hb-badge {
