--- a/frontend/src/app/features/pages/dashboard/components/e-commerce/audience-overview/audience-overview.component.html
+++ b/frontend/src/app/features/pages/dashboard/components/e-commerce/audience-overview/audience-overview.component.html
@@ -1,7 +1,7 @@
 <app-card>
     <div>
         <h4 class="border-b pb-4 mb-2">
-            <strong class="font-headingFontFamily text-primary-900 text-lg">Audience Overview</strong>
+            <strong class="title-header text-primary-900 text-lg">Audience Overview</strong>
         </h4>
         <div>
             <p-chart type="bar" [data]="data" [options]="options"></p-chart>
