--- a/frontend/src/app/features/pages/dashboard/components/e-commerce/e-live-visits/e-live-visits.component.html
+++ b/frontend/src/app/features/pages/dashboard/components/e-commerce/e-live-visits/e-live-visits.component.html
@@ -1,7 +1,7 @@
 <app-card>
     <div>
         <h4 class="border-b pb-4 mb-2">
-            <strong class="font-headingFontFamily text-primary-900 text-lg">Live Visits on Our Site</strong>
+            <strong class="title-header text-primary-900 text-lg">Live Visits on Our Site</strong>
         </h4>
         <div class="flex justify-between items-center p-4">
             <div class="w-80 m-auto">
