--- a/frontend/src/app/features/pages/dashboard/components/e-commerce/e-visit-by-day/e-visit-by-day.component.html
+++ b/frontend/src/app/features/pages/dashboard/components/e-commerce/e-visit-by-day/e-visit-by-day.component.html
@@ -1,7 +1,7 @@
 <app-card>
     <div>
         <h4 class="border-b pb-4 mb-2 flex justify-between items-center">
-            <strong class="font-headingFontFamily text-primary-900 text-lg">Visits by Day</strong>
+            <strong class="title-header text-primary-900 text-lg">Visits by Day</strong>
             <span class="text-secondray-400 text-[15px] font-normal font-fontFamily">Total 248.5k Visits</span>
         </h4>
         <div class="flex justify-between items-center p-4">
