--- a/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
+++ b/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
@@ -17,7 +17,7 @@
                     <app-e-visit-by-day></app-e-visit-by-day>
                 </div>
                 <div class="col-span-12 xl:col-span-4 mb-4">
-                    
+                    <app-impressions></app-impressions>
                 </div>
             </div>
         </div>
