--- a/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
+++ b/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
@@ -17,7 +17,12 @@
                     <app-e-visit-by-day></app-e-visit-by-day>
                 </div>
                 <div class="col-span-12 xl:col-span-4 mb-4">
-                    <app-impressions></app-impressions>
+                    <div class="mb-4">
+                        <app-impressions></app-impressions>
+                    </div>
+                    <div>
+                        <app-activity-timeline></app-activity-timeline>
+                    </div>
                 </div>
             </div>
         </div>
@@ -30,6 +35,11 @@
             <div class="grid grid-cols-12 gap-4">
                 <div class="col-span-12 mb-4">
                     <app-e-live-visits></app-e-live-visits>
+                </div>
+            </div>
+            <div class="grid grid-cols-12 gap-4">
+                <div class="col-span-12 mb-4">
+                    <app-sales-by-locations></app-sales-by-locations>
                 </div>
             </div>
         </div>
