--- a/frontend/src/app/features/pages/dashboard/components/e-commerce/e-visit-by-day/e-visit-by-day.component.html
+++ b/frontend/src/app/features/pages/dashboard/components/e-commerce/e-visit-by-day/e-visit-by-day.component.html
@@ -5,7 +5,7 @@
             <span class="text-secondray-400 text-[15px] font-normal font-fontFamily">Total 248.5k Visits</span>
         </h4>
         <div class="flex justify-between items-center p-4">
-            <div class="w-full m-auto">
+            <div class="w-full h-full max-w-[572px] p-4 m-auto">
                 <p-chart type="radar" [data]="data" [options]="options"></p-chart>
             </div>
         </div>
