--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 // Customize ng prime components
+@import "primeicons/primeicons.css";
 
 @layer tailwind-base, primeng, tailwind-utilities;
 
@@ -12,11 +13,10 @@
     @tailwind utilities;
 }
 
-@layer primeng {
-    @import "primeng/resources/themes/lara-light-blue/theme.css";
-    @import "primeng/resources/primeng.css";
-    @import "primeicons/primeicons.css";
-}
+// @layer primeng {
+    // @import "primeng/resources/themes/lara-light-blue/theme.css";
+    // @import "primeng/resources/primeng.css";
+// }
 
 @import "assets/scss/fonts";
 
