--- a/frontend/src/app/features/pages/dashboard/components/e-commerce/sales-by-locations/sales-by-locations.component.html
+++ b/frontend/src/app/features/pages/dashboard/components/e-commerce/sales-by-locations/sales-by-locations.component.html
@@ -7,7 +7,7 @@
             <c-button icon="pi-ellipsis-h" (click)="menu.toggle($event)"></c-button>
         </div>
         <div class="mt-6">
-            <div class="p-4">
+            <div class="px-4">
                 <img src="/assets/images/hex-map.png" class="hex-map" alt="hex-map">
             </div>
             <div>
