--- a/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
+++ b/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
@@ -4,7 +4,7 @@
             <div class="grid grid-cols-12 gap-4 mb-4">
                 <div class="col-span-12 xl:col-span-4" *ngFor="let item of data; let i = index">
                     <app-e-state-box [price]="item.price" [state]="item.state"
-                        [percentage]="item.percentage"></app-e-state-box>
+                        [percentage]="item.percentage" [icon]="item.icon"></app-e-state-box>
                 </div>
             </div>
             <div class="grid grid-cols-12 gap-4 mb-4">
@@ -25,6 +25,11 @@
                     </div>
                 </div>
             </div>
+            <div class="grid grid-cols-12 gap-4">
+                <div class="col-span-12 xl:col-span-12 mb-4">
+                    <app-revenue-status></app-revenue-status>
+                </div>
+            </div>
         </div>
         <div class="col-span-12 xl:col-span-4">
             <div class="grid grid-cols-12 gap-4">
@@ -40,6 +45,11 @@
             <div class="grid grid-cols-12 gap-4">
                 <div class="col-span-12 mb-4">
                     <app-sales-by-locations></app-sales-by-locations>
+                </div>
+            </div>
+            <div class="grid grid-cols-12 gap-4">
+                <div class="col-span-12 mb-4">
+                    <app-new-customers></app-new-customers>
                 </div>
             </div>
         </div>
