Complete recent orders

--- a/frontend/src/app/features/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/features/pages/dashboard/dashboard.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="grid grid-cols-12 gap-4 mb-4">
         <div class="col-span-12 xl:col-span-12">
-            <app-recent-orders></app-recent-orders>
+            <!-- <app-recent-orders></app-recent-orders> -->
         </div>
     </div>
 </div>
