--- a/frontend/src/app/features/pages/dashboard/components/e-commerce/recent-orders/recent-orders.component.html
+++ b/frontend/src/app/features/pages/dashboard/components/e-commerce/recent-orders/recent-orders.component.html
@@ -1,1 +1,54 @@
-<p>recent-orders works!</p>
+<app-card>
+    <div>
+        <div class="flex justify-between items-center">
+            <h4>
+                <strong class="title-header text-primary-900 text-lg">Recent Orders</strong>
+            </h4>
+            <c-button icon="pi-ellipsis-h" (click)="menu.toggle($event)"></c-button>
+        </div>
+        <div class="mt-2">
+            <p-table [value]="products" [paginator]="true" [rows]="5" [tableStyle]="{ 'min-width': '50rem' }"
+                [rowsPerPageOptions]="[5, 10, 20]" styleClass="p-datatable-striped custom-table"
+                [tableStyle]="{'min-width': '50rem'}">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th>Order ID</th>
+                        <th class="text-left">Product</th>
+                        <th>Customer</th>
+                        <th>Price</th>
+                        <th>Vendor</th>
+                        <th>Date</th>
+                        <th>Status</th>
+                        <th>Rating</th>
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-product>
+                    <tr>
+                        <td class="text-sm font-semibold">{{product.orderId}}</td>
+                        <td>
+                            <div class="flex justify-start items-center">
+                                <img [src]="'/assets/images/products/' + product.image" [alt]="product.product"
+                                    class="w-12 rounded-xl mr-2" />
+                                <a routerLink="/"
+                                    class="font-semibold font-headingFontFamily hover:text-primary-900 duration-200 transition-all text-sm">
+                                    {{product.product}}
+                                </a>
+                            </div>
+                        </td>
+                        <td>{{product.customer}}</td>
+                        <td>{{'$'+product.price}}</td>
+                        <td>{{product.vendor}}</td>
+                        <td>{{product.date}}</td>
+                        <td>
+                            <span class="tag" [ngClass]="product.status | lowercase">
+                                {{product.status}}
+                            </span>
+                        </td>
+                        <td>{{product.rating}}</td>
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
+        <p-tieredMenu #menu [model]="items" [popup]="true"></p-tieredMenu>
+    </div>
+</app-card>
