--- a/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
+++ b/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
@@ -1,5 +1,5 @@
-<div class="mx-4 pb-4">
-    <div class="grid grid-cols-12 gap-4 mb-4">
+<div class="mx-4 pb-4 mb-4">
+    <div class="grid grid-cols-12 gap-4">
         <div class="col-span-12 xl:col-span-8">
             <div class="grid grid-cols-12 gap-4 mb-4">
                 <div class="col-span-12 xl:col-span-4" *ngFor="let item of data; let i = index">
@@ -52,6 +52,11 @@
                     <app-new-customers></app-new-customers>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="grid grid-cols-12 gap-4 mb-4">
+        <div class="col-span-12 xl:col-span-12">
+            <app-recent-orders></app-recent-orders>
         </div>
     </div>
 </div>
