Complete team members list component

--- a/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
+++ b/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
@@ -59,4 +59,14 @@
             <app-recent-orders></app-recent-orders>
         </div>
     </div>
+    <div class="grid grid-cols-12 gap-4">
+        <div class="col-span-12 xl:col-span-8">
+            <app-team-members-list></app-team-members-list>
+        </div>
+        <div class="col-span-12 xl:col-span-4">
+
+        </div>    
+        
+    </div>
+
 </div>
