--- a/frontend/src/assets/scss/_ngprime-custom.scss
+++ b/frontend/src/assets/scss/_ngprime-custom.scss
@@ -57,6 +57,7 @@
 
     .p-datatable-tbody {
         tr {
+            @apply border-b border-b-[#f4f7f6];
             td {
                 @apply text-primary-700 p-2 text-sm text-center;
             }
@@ -77,6 +78,8 @@
 }
 
 .p-paginator {
+    @apply mt-4;
+    
     .p-paginator-pages {
         .p-paginator-page {
             @apply w-11 h-11 rounded-md duration-200 transition-all bg-transparent text-gray-600 mx-0.5;
@@ -98,7 +101,6 @@
 
 .p-dropdown {
     @apply text-primary-900 mx-2 h-11 relative bg-white border border-gray-200 transition-all duration-200 cursor-pointer rounded-md;
-    // border: 1px solid #d1d5db;
 
     .p-dropdown-label {
         @apply p-2 cursor-pointer border-none outline-none block whitespace-nowrap overflow-hidden text-ellipsis;
