--- a/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
+++ b/frontend/src/app/features/pages/dashboard/e-commerce/e-commerce.component.html
@@ -64,9 +64,8 @@
             <app-team-members-list></app-team-members-list>
         </div>
         <div class="col-span-12 xl:col-span-4">
-
-        </div>    
-        
+            <app-best-selling-products></app-best-selling-products>
+        </div>
     </div>
 
 </div>
