--- a/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/components/layouts/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <nav class="fixed top-0 left-0 h-full w-[260px] shadow-sm">
     <a class="flex items-center justify-between py-4 px-4 bg-white" routerLink="/">
         <img class="h-[2.9rem]" src="/assets/images/logo-type.svg" alt="logo">
-        <img class="h-8" src="/assets/icons/arrow-square-left.svg" alt="arrow-square-left">
+        <!-- <img class="h-8" src="/assets/icons/arrow-square-left.svg" alt="arrow-square-left"> -->
     </a>
     <!-- end logo and logo type -->
 
