--- a/frontend/src/assets/scss/_ngprime-custom.scss
+++ b/frontend/src/assets/scss/_ngprime-custom.scss
@@ -59,7 +59,7 @@
         tr {
             @apply border-b border-b-[#f4f7f6];
             td {
-                @apply text-primary-700 p-2 text-sm text-center;
+                @apply text-primary-700 p-2 py-3 text-sm text-center;
             }
         }
     }
