--- a/frontend/src/assets/scss/_custom.scss
+++ b/frontend/src/assets/scss/_custom.scss
@@ -14,7 +14,7 @@ strong {
 }
 
 .tag {
-    @apply px-4 py-1 font-bold text-sm rounded-md;
+    @apply px-3.5 py-1 font-semibold text-sm rounded-md font-fontFamily;
 }
 
 .pending {
