--- a/frontend/src/app/features/base/base.component.html
+++ b/frontend/src/app/features/base/base.component.html
@@ -5,5 +5,6 @@
         <div class="">
             <router-outlet></router-outlet>
         </div>
+        <app-footer></app-footer>
     </div>
 </div>
